<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!--<string-array name="special_locale_names">-->
        <!--<item>中文 (简体)</item>-->
        <!--<item>中文 (繁體)</item>-->
    <!--</string-array>-->

    <string name="BibleApp">聖經行事曆</string>

    <string name="main_select_share">請選擇分享:</string>
    <string name="main_share_text">文字</string>
    <string name="main_share_image">圖像</string>
    <string name="main_share_bible">經文分享</string>

    <string name="PermissionReason">程式將會要求允許\n\n(儲存位置)儲存相片資料</string>
    <string name="permissionRequest">請按「%1$s」設定「允許」程式使用「%2$s」功能</string>
    <string name="permissionCalendar">日曆</string>
    <string name="permissionStorage">儲存</string>
    <string name="permissionLocation">地點</string>
    <string name="permissionCamera">相機</string>
    <string name="permissionContact">聯絡</string>
    <string name="BtnOk">確定</string>
    <string name="BtnCancel">取消</string>
    <string name="disable">關閉</string>
    <string name="enable">開啟</string>

    <string name="widget_deviceType">v</string>
    <string name="widget_layoutType">v</string><!--If there is layout, should have this declaration -->

    <string name="info">系統資訊</string>
    <string name="infoBrand">牌子:</string>
    <string name="infoModel">型號:</string>
    <string name="infoSysVersion">系統版本:</string>
    <string name="infoAppVersion">程式版本:</string>
    <string name="infoFrDate">有效開始日:</string>
    <string name="infoToDate">有效結束日:</string>
    <string name="infoScreenType">畫面:</string>
    <string name="infoDensity">密度:</string>
    <string name="infoResolution">解析度:</string>

    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="tomorrow">明天</string>
    <string name="WordToday">今天</string>
    <string name="WordGoldVerse">金句</string>
    <string name="MsgCalendarChangeEventDate">提示: 連續按日期2次可更改 [日期]</string>
    <string name="out_of_range">超出支援顯示範圍</string>
    <string name="out_of_range_download">超出範圍(%1$s),可到Goolge Play檢查是否有新更新,或電郵到info@arkist.org查詢</string>

    <string name="app_name_2015">全年好日曆</string>
    <string name="app_name">全年金句日曆</string>

    <string name="broadcast_download">請下載最新全年金句日曆</string>
    <string name="broadcast_remind_today">提醒：請細讀今天金句</string>
    <string name="broadcast_remind">金句提醒:</string>

    <string name="main_share">分享</string>
    <string name="main_bible">在線閱讀</string>
    <string name="main_arkist">離線閱讀</string>
    <string name="main_calendar">日曆</string>
    <string name="main_alarm">提醒設定</string>
    <string name="main_about">關於我們</string>
    <string name="main_support">支援</string>
    <string name="main_copy">複製</string>
    <string name="main_today">今天</string>
    <string name="main_copy_to_pasteboard">已把金句放到剪貼薄</string>
    <string name="main_nothing_to_copy">找不到可複製文字</string>
    <string name="main_find_bible_app">找尋閱讀聖經App</string>
    <string name="main_cannot_find_bible_app">找不到此機閱讀聖經App版本</string>

    <string name="support_contact">如有任何問題，請電郵到 info@arkist.org。謝謝。</string>
    <string name="support_subject">「全年金句日曆」查詢</string>
    <string name="support_device_info">以下是正使用裝置資料:</string>
    <string name="support_mail_via">電郵 經...</string>
    <string name="support_mail_to">mailto:</string>
    <string name="support_restart">重啟程式</string>

    <string name="alarm_reminder">金句提醒</string>
    <string name="alarm_others">其他設定</string>

    <string name="about_technicalSupport">技術支援</string>
    <string name="about_contactUs">聯絡我們</string>
    <string name="about_contentEnquiry">內容查詢</string>
    <string name="about_churchCalendar">教會年曆</string>
    <string name="about_calendarHK">香港</string>
    <string name="about_calendarTW">台灣</string>
    <string name="about_calendarOT">其他</string>
    <string name="about_langType">言語</string>
    <string name="about_langTraditional">繁體</string>
    <string name="about_langSimplified">簡體</string>
    <string name="about_calendarLocation">日曆地區</string>
    <string name="about_calendarAdjustment">農曆微調</string>
    <string name="about_hk_holiday_term">*<a href="http://www.labour.gov.hk/tc/news/latest_holidays2017.htm">香港法定假期</a></string>

    <string name="about_arkist_address1">網頁Website：www.arkist.org</string>
    <string name="about_arkist_address2">電郵Email：info@arkist.org</string>
    <string name="about_hkbs_address1">電話Tel：(852) 2368 5147</string>
    <string name="about_hkbs_address2">傳真 Fax：(852) 2311 0167</string>
    <string name="about_hkbs_address3">網頁Website：www.hkbs.org.hk</string>
    <string name="about_hkbs_address4">電郵Email：info@hkbs.org.hk</string>

    <string name="about_hkbs">1950年成立，是聯合聖經公會（UBS）全球147家聖經公會成員之一。一直秉承「讓每一個人能以可負擔的價錢，獲得一本讀得明白的聖經」為宗旨，承擔中文聖經翻譯、出版、分發到社會各階層，並推廣聖經的使命。多年來出版及發行《和合本》、《廣東話聖經》、《呂振中譯本》、《現代中文譯本》、《新標點和合本》等聖經版本。2010年出版《和合本修訂版》新舊約全書，承傳《和合本》聖經近一個世紀對全球華人教會的祝福。</string>
    <string name="about_arkist">希望每一個人都勤力讀聖經, 明白神的話語。所以自2009年起, 開發Nokia手機聖經程式，並把經文分類、整理，直至現在。願主的話語常與你同在。</string>
    <!--\n版權聲明\n全年金句日曆 2016 ＠Arkist 版權所有\n\n\n版權聲明(2015年12月31日或之前)\n 全年好日曆 2015 ©香港聖經公會 所有\n和合本修訂版 2006, 2010 ©香港聖經公會 版權所有\n蒙香港聖經公會允許使用\nwww.hkbs.org.hk</string> -->
    <string name="about_copyright2016">
            <![CDATA[
<p><u>版權聲明</u><br/>
全年金句日曆 2016 ＠Arkist 版權所有
全年好日曆 2015 ＠香港聖經公會 版權所有<br/>
和合本修訂版 2006, 2010 ©香港聖經公會 版權所有<br/>
蒙香港聖經公會允許使用\nwww.hkbs.org.hk
        ]]>
    </string>
    <string name="about_copyright2015">版權聲明\n全年好日曆 2016 ＠香港聖經公會 版權所有\n和合本修訂版 2006, 2010 ©香港聖經公會 版權所有\n蒙香港聖經公會允許使用\nwww.hkbs.org.hk</string>
	<string name="app_rule2016">
        <![CDATA[
<p><big><big><u>使用條款</u></big></big><br/>
在使用「全年金句日曆」應用程式前，請細閱本條款及細則：<br/>
<br/>
1. 「全年金句日曆」及「全年好日曆」（2015年或之前的名稱）應用程式是由Arkist開發，應用程式及其任何更新、修改或提升，均受版權法、商標法及其他有關知識產權法律所保護。<br/>
<br/>
2. 「全年金句日曆」應用程式的內容，包括文字、介面、圖案、展品、文件及其他組成部分，版權屬Arkist所有；2015年或之前之「全年好日曆」應用程式的內容，包括文字、介面、圖案、展品、文件及其他組成部分，版權屬香港聖經公會所有；和合本修訂版 2006, 2010 版權屬香港聖經公會所有，蒙香港聖經公會允許使用；「全年金句日曆」及「全年好日曆」應用程式的任何軟體、代碼、腳本程式等，版權屬Arkist所有。<br/>
<br/>
3.  在未經Arkist及香港聖經公會預先書面批准下，不得仿造、複製、印製、銷售、轉售或利用作商業用途。<br/>
<br/>
4.  Arkist對「全年金句日曆」應用程式所提供的任何服務及特性、缺失、錯誤發送或故障概不負責。<br/>
<br/>
5.  須同意只合法使用「全年金句日曆」應用程式，而使用方式並不侵犯或限制或妨礙任何第三方使用及享用「全年金句日曆」應用程式。<br/>
<br/>
6.  當首次使用「全年金句日曆」應用程式，本條款及細則即時生效。Arkist保留權利不時更改本條款及細則。<br/>
<br/>
        ]]>
    </string>
    <string name="app_rule2015">
        <![CDATA[
<p><big><big><u>使用條款</u></big></big><br/><br/>
在使用「全年好日曆」應用程式前，請細閱本條款及細則：<br/>
<br/>
1. 「全年好日曆」應用程式是由Arkist開發，其應用程式及任何更新、修改或提升，均受版權法、商標法及其他有關知識產權法律所保護。<br/>
<br/>
2. 「全年好日曆」應用程式的內容，包括文字、介面、圖案、展品、文件及其他組成部分，版權屬香港聖經公會所有；應用程式的任何軟體、代碼、腳本程式等，版權屬Arkist所有。<br/>
<br/>
3. 在未經Arkist預先書面批准下，不得仿造、複製、印製、銷售、轉售或利用作商業用途。<br/>
<br/>
4. Arkist對「全年好日曆」應用程式所提供的任何服務及特性、缺失、錯誤發送或故障概不負責。<br/>
<br/>
5. 須同意只合法使用「全年好日曆」應用程式，而使用方式並不侵犯或限制或妨礙任何第三方使用及享用「全年好日曆」應用程式。 <br/>
<br/>
6. 當首次使用「全年好日曆」應用程式，本條款及細則即時生效。Arkist保留權利不時更改本條款及細則。<br/>
<br/>
        ]]>
    </string>
    <!-- 	<string name="about_hkbs_address">
            <![CDATA[
    <p>香港聖經公會 Hong Kong Bible Society<br/>
    香港九龍尖沙咀漆咸道南67號安年大廈902室<br/>
    <br/>
    Room 902, Oriental Centre,<br/>
    67 Chatham Road South,<br/>
    Tsimshatsui, Kowloon, Hong Kong<br/>
    <br/>
    電話Tel：(852) 2368 5147<br/>
    傳真 Fax：(852) 2311 0167<br/>
    網頁Website：www.hkbs.org.hk<br/>
    電郵Email：info@hkbs.org.hk<br/></p>
            ]]> </string>-->

    <!-- <p>香港聖經公會 Hong Kong Bible Society<br/>
    <br/> -->
	<string name="about_hkbs_address">
        <![CDATA[
<p>電話Tel：(852) 2368 5147<br/>
傳真 Fax：(852) 2311 0167<br/>
網頁Website：www.hkbs.org.hk<br/>
電郵Email：info@hkbs.org.hk<br/></p>
        ]]>
	</string>
	<string name="about_arkist_address">
        <![CDATA[
<center><p>
網頁Website：www.arkist.org<br/>
電郵Email：info@arkist.org<br/></p></center>
        ]]>
	</string>

    <string name="quick_response_custom_msg">Custom message\u2026</string>
    <string name="no_title_label">(No title)</string>
    <string name="quick_response_email_failed">Failed to find an email program</string>
	<string name="snooze_label">"Snooze"</string>
	<string name="email_guests_label">Email guests</string>
	<string translatable="false" name="email_subject_prefix">Re:\u0020</string>
<!--
public String getQuantityString (int id, int quantity, Object... formatArgs)
the first count parameter selects the appropriate plural string and the second count parameter is inserted into the %d placeholder.  
 -->
	<plurals name="Nminutes">
        <item quantity="one">1 minute</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> minutes</item>
    </plurals>
    <!-- number of events in the notification bar -->
    <plurals name="Nevents">
        <item quantity="one">1 event</item><!-- This is the label for a 1 event. -->
        <item quantity="other"><xliff:g id="count">%d</xliff:g> events</item><!-- This is the label for 2 or more events. -->
    </plurals>
    <!-- number of remaining events for an alert digest in the notification bar [CHAR LIMIT = 30] -->
    <plurals name="N_remaining_events">
        <item quantity="one">+1 event</item>
        <item quantity="other">+<xliff:g id="count">%d</xliff:g> events</item>
    </plurals>
    <!-- This is shown in the popup picker when emailing attendees -->
    <string name="email_picker_label">Email with</string>
     <!-- This shows the number of additional reminders that were missed. This
         is the singular case so it displays '1 more reminder' -->
    <string name="alert_missed_events_single">(<xliff:g id="reminder_count">%s</xliff:g> more reminder)</string>
    <!-- This shows the number of additional reminders that were missed.  For example,
         if there were two additional reminders then this would show
         '2 more reminders' -->
    <string name="alert_missed_events_multiple">(<xliff:g id="reminder_count">%s</xliff:g> more reminders)</string>

</resources>