<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/supportTechnicalHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:text="@string/about_technicalSupport"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
                
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/arkist" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <!-- <TextView
                android:id="@+id/supportArkistAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="left"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:text="@string/about_arkist_address"
                android:textAppearance="?android:attr/textAppearanceSmall" /> -->
			<TextView
                android:id="@+id/supportArkistAddress1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:text="@string/about_arkist_address1"
                android:textAppearance="?android:attr/textAppearanceSmall" />
			<TextView
                android:id="@+id/supportArkistAddress2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:text="@string/about_arkist_address2"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Button
                android:id="@+id/supportGetSupport"
                android:text="@string/about_contactUs"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/supportContentHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:text="@string/about_contentEnquiry"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
             <LinearLayout
                android:id="@+id/xmlSupportHKBS_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >
				<FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.16"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/hkbs_logo_2015" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

 			<!-- <TextView
                android:id="@+id/supportHkbsAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="left"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:text="@string/about_hkbs_address"
                android:textAppearance="?android:attr/textAppearanceSmall" /> -->
                <LinearLayout
                    android:id="@+id/xmlSupportHKBS_Addr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                android:id="@+id/supportHkbsAddress1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:text="@string/about_hkbs_address1"
                android:textAppearance="?android:attr/textAppearanceSmall" />
                
                <TextView
                android:id="@+id/supportHkbsAddress2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:text="@string/about_hkbs_address2"
                android:textAppearance="?android:attr/textAppearanceSmall" />
                
                <TextView
                android:id="@+id/supportHkbsAddress3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:text="@string/about_hkbs_address3"
                android:textAppearance="?android:attr/textAppearanceSmall" />
                                
                <TextView
                android:id="@+id/supportHkbsAddress4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:text="@string/about_hkbs_address4"
                android:textAppearance="?android:attr/textAppearanceSmall" />
                </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:text="@string/about_langType"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center_horizontal">
                <Button
                    android:id="@+id/xmlLangTraditional"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/about_langTraditional"/>

                <Button
                    android:id="@+id/xmlLangSimplified"
                    android:layout_marginLeft="5dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_toLeftOf="@id/xmlLangTraditional"
                    android:text="@string/about_langSimplified"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingRight="2dp"
                android:layout_marginTop="18dp"
                android:text="@string/about_calendarLocation"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/xmlSupportHK_Holiday_term"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:text="@string/about_hk_holiday_term"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            <!--
                http://www.labour.gov.hk/tc/news/latest_holidays2016.htm
            -->
            <RelativeLayout
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <Button 
                    android:id="@+id/xmlSupportHongKong"
                    android:layout_height="wrap_content"
                	android:layout_width="wrap_content"
                	android:layout_centerHorizontal="true"
                	android:text="@string/about_calendarHK"/>
                <Button 
                    android:id="@+id/xmlSupportTaiWan"
                    android:layout_height="wrap_content"
                	android:layout_width="wrap_content"
                	android:layout_toLeftOf="@id/xmlSupportHongKong"
                	android:text="@string/about_calendarTW"/>
                <Button 
                    android:id="@+id/xmlSupportOther"
                    android:layout_height="wrap_content"
                	android:layout_width="wrap_content"
                	android:layout_toRightOf="@id/xmlSupportHongKong"
                	android:text="@string/about_calendarOT"/>
            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingRight="2dp"
                android:layout_marginTop="18dp"
                android:text="@string/about_calendarAdjustment"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <Button
                    android:id="@+id/xmlSupportAdjDecrease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="&lt;"/>
                <TextView
                    android:id="@+id/xmlSupportAdjValue"
                    android:layout_marginLeft="18dp"
                    android:layout_marginRight="18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"/>
                <Button
                    android:id="@+id/xmlSupportAdjIncrease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="&gt;"/>
            </LinearLayout>
            <TextView
                android:id="@+id/xmlSupportHolyDayTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:text="@string/about_churchCalendar"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:id="@+id/xmlSupportHolyDayButtons"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">
                <Button
                    android:id="@+id/xmlSupportHolyDayOff"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/disable"/>
                <Button
                    android:id="@+id/xmlSupportHolyDayOn"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/enable"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:text="@string/info"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium" />
             <TextView
                android:id="@+id/xmlSupportVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>